# stock-analysis

./: .gitignore  README.md  pyproject.toml
src/: app.py  constants.py
src/stock/: stock.py  ticker_data.py
