[tool.poetry]
name = "stock"
version = "0.1.0"
description = "A dashboard for displaying selected stocks."
authors = ["Tiansu Yu <tiansu.yu@icloud.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
dash = "^2.12.1"
yfinance = "^0.2.28"
pandas = "^2.0.3"
pydantic = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-random = "^0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
